# QQBot

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
Python/: Botlog.py  QQbot.py  dispatcher.py  report_bridge.py  worker.py
include/: Botlog.h  ChineseString.h  Executor.h  MD5.h  MessageFetcher.h  Parser.h  QMessage.h  QMsgFormatter.h  QQBot.h  QQMessageSender.h  TaskBuilder.h  TaskRunner.h  ThreadPool.h  UIAQQMessageExporter.h  UIAWindowController.h  WinInIWrapper.h  converSTR.h
include/Bus/: EventBus.h  EventBusInstance.h  EventTypes.h
include/factories/: ParserFactory.h
include/interface/: ICppy.h  IMessageExporter.h  IMessageFeedback.h  IMessageFetcher.h  IMsgFormatter.h  IQMsgFormatter.h  IQQMessageExporter.h  IQQMessageSender.h  ITaskRunner.h  IUIAWindowController.h
include/network/: BoardcastTask.h  HeartbeatTask.h  HttpClientAdapter.h  HttpServerAdapter.h  NetWorkClientAdapter.h  NetWorkResultServer.h  NetWorkServerAdapter.h  ResultHttpServer.h  ServiceManager.h  httplib.h  tcplib.h  udplib.h
ini/: BotSetting.ini  PythonEnv.ini  PythonTask.ini
proto/: message.proto
src/: main.cpp
src/common/: ChineseString.cpp  Executor.cpp  MessageFetcher.cpp  Parser.cpp  QMsgFormatter.cpp  QQBot.cpp  QQMessageSender.cpp  TaskBuilder.cpp  TaskRunner.cpp  UIAQQMessageExporter.cpp  UIAWindowController.cpp
src/factories/: ParserFactory.cpp
src/ini/: WinInIWrapper.cpp
src/log/: Botlog.cpp
src/network/: BoardcastTask.cpp  HeartbeatTask.cpp  HttpClientAdapter.cpp  HttpServerAdapter.cpp  NetWorkClientAdapter.cpp  NetWorkResultServer.cpp  NetWorkServerAdapter.cpp  ResultHttpServer.cpp  ServiceManager.cpp
